--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script>
       const el = document.getElementById("h5p-container");
       const options = {
-        h5pJsonPath: "/assets",
-        frameJs: "/assets/dist/frame.bundle.js",
-        frameCss: "/assets/dist/styles/h5p.css",
+        h5pJsonPath: "./assets",
+        frameJs: "./assets/dist/frame.bundle.js",
+        frameCss: "./assets/dist/styles/h5p.css",
       };
       new H5PStandalone.H5P(el, options);
     </script>
