--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   </head>
   <body>
     <div id="h5p-container"></div>
+    <button onclick="sendData()">Send Data</button>
+    <script src="./assets/dist/cryptojs_v3.1.2.js"></script>
+    <script src="./assets/dist/xapiwrapper.js"></script>
+    <script src="./assets/dist/interaction.js"></script>
     <script type="text/javascript" src="assets/dist/main.bundle.js"></script>
     <script>
       const el = document.getElementById("h5p-container");
       const options = {
-        h5pJsonPath: "/assets",
-        frameJs: "/assets/dist/frame.bundle.js",
-        frameCss: "/assets/dist/styles/h5p.css",
+        h5pJsonPath: "./assets",
+        frameJs: "./assets/dist/frame.bundle.js",
+        frameCss: "./assets/dist/styles/h5p.css",
       };
       new H5PStandalone.H5P(el, options);
     </script>
